--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/oxide": "^4.1.10",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
+  "dev": "next dev",
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5"
   }
 }
